deploy/k8s/base/slackbot-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: slackbot
spec:
  selector:
    app: slackbot
  ports:
    - name: http
      port: 3000
      targetPort: 3000
